--- a/main.html
+++ b/main.html
@@ -5,8 +5,43 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Car Dealer</title>
+    <link rel="stylesheet" href="main.css">
 </head>
 <body>
-    <script src="main.css"></script>
+    <div id="container">
+        <header>
+            <h1>Multi-Choice Car Dealer</h1>
+        </header>
+        <p>Welcome to Multi-Choice Car Dealer, your premier destination for all your 
+            automotive needs. With a legacy of excellence and a commitment to customer 
+            satisfaction, we have established ourselves as a leading car dealership in Kenya. 
+            Our passion for automobiles drives us to provide top-quality vehicles and unparalleled 
+            service to our valued clients.
+            At Multi-Choice, we understand that purchasing a car is not just a transaction; 
+            it's an experience. Our dedicated team of automotive experts is here to guide you 
+            through every step of the process, ensuring you find the perfect vehicle that suits 
+            your preferences, lifestyle, and budget. From sleek sedans to rugged SUVs, our diverse 
+            inventory showcases the latest models from renowned manufacturers, as well as meticulously 
+            inspected pre-owned options.
+        </p>
+
+        <h2>Search by type: </h2> <br>
+        <div id="list">
+            <ul>
+                <li><a href="toyota.html">Toyota</a></li>
+                <li><a href="mercedes.html">Mercedes-Benz</a></li>
+                <li><a href="mazda.html">Mazda</a></li>
+                <li><a href="bmw.html">BMW</a></li>
+            
+            </ul>
+        </div>
+        <footer>
+            <p>Phone: 0712345678 | Email: multi-choice@gmail.com</p>
+            <p>210 Nairobi | Moi Avenue | Kenya</p>
+            <p>Monday - Friday</p>
+            <p>08:00 Am - 05:00 PM</p>
+        </footer>
+    </div>
+    <script src=""></script>
 </body>
 </html>
